fix: remove extra space in code example

--- a/app/assets/css/custom.css
+++ b/app/assets/css/custom.css
@@ -117,6 +117,7 @@ code,
 
 pre code {
     background: none;
+    padding: 0;
 }
 
 /* info/warning/important/success boxes ============================= */
